# heterogeneous-network

./: .clang-format  .clangd  .env.example  .eslintrc.yaml  .gitignore  Doxyfile  Makefile  README.md  extra_script.py  jest.config.json  package-lock.json  package.json  platformio.ini  tsconfig.json
arduino/: .clangd  .gitignore  Makefile  README.md  install-toolchain.sh  platformio.ini
emulator/: .eslintrc.yaml  electron-builder.json5  (+6 more)
py-core/: install.sh  pyproject.toml  requirements.txt
py-core/node/: main.ts  message.ts  package.json
py-core/node/src/: index.ts  ipc.ts  message.ts  net.ts
py-core/py_core/: __init__.py  __main__.py
py-core/py_core/ipc/: __init__.py  core.py  message.py  server.py
py-core/py_core/media/: __init__.py  loopback.py  udp.py  websocket.py
py-core/py_core/net/: __init__.py  core.py  cost.py  node_id.py  test_address.py  test_node_id_and_cost.py
py-core/py_core/net/link/: __init__.py  address.py  frame.py  service.py  test_address.py
py-core/py_core/net/local/: service.py
py-core/py_core/net/neighbor/: constants.py  service.py  socket.py  table.py
py-core/py_core/net/node/: __init__.py  cluster_id.py  destination.py  node_id.py  source.py  test_data_classes.py
py-core/py_core/net/notification/: service.py
py-core/py_core/net/tunnel/: port.py
py-core/py_core/serde/: __init__.py  buffer.py  bytes.py  constant.py  derive.py  empty.py  enum.py  primitives.py  test_buffer.py  test_bytes.py  test_derive.py  test_enum.py  test_primitives.py  test_variant.py  test_vector.py  traits.py  utf8.py  variant.py  vector.py
(+1172 files in other folders)
