[tool.poetry]
name = "py-core"
version = "0.1.0"
description = ""
authors = ["keke1008 <keke2222337@gmail.com>"]
readme = "README.md"
packages = [{ include = "py_core" }]

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pyright = "^1.1.353"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
